# genetic-algo-cpp

./: .gitignore  CMakeLists.txt  README.md
include/ga/: ga.hpp  ga.tpp  thread_pool.hpp
include/neural_network/: activations.hpp  activations.tpp  layers.hpp  layers.tpp  neural_network.hpp  neural_network.tpp
include/problems/: price_direction.hpp
src/: main.cpp
src/ga/: thread_pool.cpp
src/problems/: price_direction.cpp
